--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "author": "yukihirop <te108186@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "google-spreadsheet": "^2.0.8"
+    "commander": "^4.1.0",
+    "csv": "^5.3.1",
+    "csv-parse": "^4.8.5",
+    "deepmerge": "^4.2.2",
+    "google-spreadsheet": "^2.0.8",
+    "js-yaml": "^3.13.1",
+    "uuid": "^3.4.0"
   }
 }
