--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv": "^5.3.1",
     "csv-parse": "^4.8.5",
     "deepmerge": "^4.2.2",
+    "fs-extra": "^8.1.0",
     "google-spreadsheet": "^2.0.8",
     "js-yaml": "^3.13.1",
     "uuid": "^3.4.0"
