--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs-extra": "^8.1.0",
     "google-spreadsheet": "^2.0.8",
     "js-yaml": "^3.13.1",
+    "recursive-readdir": "^2.2.2",
     "uuid": "^3.4.0"
   }
 }
