Modify sit fetch master

--- a/src/main/template/sitconfig.yaml
+++ b/src/main/template/sitconfig.yaml
@@ -21,4 +21,6 @@ repo:
   local: ./.sit
   remote: *sheet_url
 local:
-  distDirPath: ./dist/locales
+  dist:
+    path: ./dist
+    sheetName: "master_data.csv"
