--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "yukihirop <te108186@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "ansi-styles": "^4.2.1",
     "commander": "^4.1.0",
     "csv": "^5.3.1",
     "csv-parse": "^4.8.5",
     "deepmerge": "^4.2.2",
+    "diff": "^4.0.2",
     "fs-extra": "^8.1.0",
     "google-spreadsheet": "^2.0.8",
     "js-yaml": "^3.13.1",
