--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-yaml": "^3.13.1",
     "moment": "^2.24.0",
     "recursive-readdir": "^2.2.2",
+    "rmdir": "^1.2.0",
     "uuid": "^3.4.0"
   }
 }
