--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "diff": "^4.0.2",
     "fs-extra": "^8.1.0",
     "google-spreadsheet": "^2.0.8",
+    "ini": "^1.3.5",
     "js-yaml": "^3.13.1",
     "moment": "^2.24.0",
     "opener": "^1.5.1",
