--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csv-parse": "^4.8.5",
     "deepmerge": "^4.2.2",
     "diff": "^4.0.2",
+    "flat": "^5.0.0",
     "fs-extra": "^8.1.0",
     "google-spreadsheet": "^2.0.8",
     "ini": "^1.3.5",
