--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "recursive-readdir": "^2.2.2",
     "rmdir": "^1.2.0",
     "uuid": "^3.4.0"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
