--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "ansi-styles": "^4.2.1",
+    "buffer-replace": "^1.0.0",
     "chokidar": "^3.3.1",
     "commander": "^4.1.0",
     "csv": "^5.3.1",
