--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-nibble": "^5.1.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.2",
     "jest": "^25.1.0"
   },
   "scripts": {
